<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/Facebook2Button"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="232dp"
        android:layout_height="87dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/manzana"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="586dp"
        android:backgroundTint="@color/reset"
        android:drawablePadding="16dp"
        android:hint="@string/trending"
        android:text="Iniciar sesión"
        android:textColor="@color/green_A400"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="478dp"
        android:backgroundTint="#FF000000"
        android:textAllCaps="false"
        android:text="@string/input"
        app:cornerRadius="8dp" />


    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="412dp"
        android:backgroundTint="@color/green_800"
        android:text="@string/logout"
        android:textAllCaps="false"
        app:cornerRadius="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="219dp"
        android:layout_marginBottom="381dp"
        android:text="Con tu correo"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="440dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/reset"
        android:drawablePadding="16dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="561dp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="27dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="536dp"
        android:text="Con tu red social"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activity_main_link"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="88dp"
        android:text="@string/hyperlink"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="269dp"
        android:backgroundTint="@color/grey_50"
        android:gravity="center|left"
        android:text="ejemplo@correo.com"
        android:textAllCaps="false"
        android:textColor="@color/grey_400"
        android:textSize="14sp"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="295dp"
        android:layout_height="21dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="343dp"
        android:text="Ingrese su correo electrónico"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="703dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="9dp"
        android:gravity="clip_horizontal|center"
        android:text="¿Aún no tienes una cuenta?"
        android:textColor="@color/black"
        android:textSize="14sp"

        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="579dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="128dp"
        android:text="Contraseña"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="176dp"
        android:backgroundTint="@color/grey_50"
        android:gravity="center|left"
        android:text="Debe tener mínimo 8 dígitos"
        android:textAllCaps="false"
        android:textColor="@color/grey_400"
        android:textSize="14sp"
        app:cornerRadius="10dp"


        app:endIconMode="password_toggle" />

    <Button
        android:id="@+id/button7"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/reset"
        android:drawablePadding="4dp"
        android:text="@string/edit"
        app:cornerRadius="15dp"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="661dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="560dp"
        app:cornerRadius="20dp"
        android:topRightRadius="20dp"
        android:background="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="560dp"
        app:cornerRadius="20dp"
        android:topRightRadius="20dp"
        android:background="@drawable/google" />
</RelativeLayout>